<resources>
    <string name="app_name">NG Community App</string>
    <string name="newgiza">NEWGIZA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="forgot_username">Forgot Username ?</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="create_account">Create Account</string>
    <string name="use_authentication_code">Use Authentication Code</string>
    <string name="new_giza">New Giza</string>
    <string name="logout">Logout</string>
</resources>
