<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/newGizaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/newgiza"
        android:textSize="33sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newGizaTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Email Address"
            android:drawableStart="@drawable/ic_person_outline"
            android:drawablePadding="10dp"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_login"
        app:passwordToggleEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_lock_outline"
            android:drawablePadding="10dp"
            android:padding="15dp"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_username"
        app:layout_constraintTop_toBottomOf="@id/pass_login"
        app:layout_constraintStart_toStartOf="@id/pass_login"
        android:layout_marginStart="5dp"
        android:layout_marginTop="17dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintTop_toBottomOf="@id/pass_login"
        app:layout_constraintEnd_toEndOf="@id/pass_login"
        android:layout_marginTop="17dp"
        android:textSize="16sp"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/forgot_pass"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="19sp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/create_acc_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/create_account"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/auth_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/use_authentication_code"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>